Make annotations visible in editor to prevent user removal

--- a/src/stylus/entry.styl
+++ b/src/stylus/entry.styl
@@ -162,7 +162,7 @@ body.ste-iframe-body
 	min-width initial
 
 	sup[data-marker]
-		display none
+		color #888
 
 div.closebutton
 	padding 2px
